Update filters tutorial

--- a/examples/09_molecular_filters.ipynb
+++ b/examples/09_molecular_filters.ipynb
@@ -81,8 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<frozen importlib._bootstrap>:241: RuntimeWarning: to-Python converter for boost::shared_ptr<RDKit::FilterHierarchyMatcher> already registered; second conversion method ignored.\n",
-      "<frozen importlib._bootstrap>:241: RuntimeWarning: to-Python converter for boost::shared_ptr<RDKit::FilterCatalogEntry> already registered; second conversion method ignored.\n"
+      "<frozen importlib._bootstrap>:241: RuntimeWarning: to-Python converter for boost::shared_ptr<RDKit::FilterHierarchyMatcher> already registered; second conversion method ignored.\n"
      ]
     }
    ],
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "0f8eefe0",
    "metadata": {},
    "outputs": [],
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3137351a",
    "metadata": {},
    "outputs": [],
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "ab862891",
    "metadata": {},
    "outputs": [
@@ -149,7 +148,7 @@
        " 'C[C@H](CCC(=O)O)CC1=CC=CC=C1']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "93f94568",
    "metadata": {},
    "outputs": [
@@ -174,7 +173,7 @@
        " 'C[C@H](CCC(=O)O)CC1=CC=CC=C1']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "cab9fc95",
    "metadata": {},
    "outputs": [
@@ -199,7 +198,7 @@
        " 'C[C@H](CCC(=O)O)CC1=CC=CC=C1']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "19a21c0e",
    "metadata": {},
    "outputs": [
@@ -221,7 +220,7 @@
        "['CC(=O)OC1=CC=CC=C1C(=O)O', 'C[C@H](CCC(=O)O)CC1=CC=CC=C1']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,10 +240,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "02a47287",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jakub/PycharmProjects/scikit-fingerprints/skfp/bases/base_filter.py:109: UserWarning: return_indicators is deprecated and will be removed in 2.0, use return_type instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "mw_mask = MolecularWeightFilter(return_indicators=True)\n",
     "lipinski_mask = LipinskiFilter(return_indicators=True)\n",
@@ -254,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "4d53f1e4",
    "metadata": {},
    "outputs": [],
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "307f6e05",
    "metadata": {},
    "outputs": [],
@@ -285,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "11970880",
    "metadata": {},
    "outputs": [
@@ -384,7 +392,7 @@
        "4                  True                  False           False  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,27 +413,18 @@
    "cell_type": "markdown",
    "id": "a581bb4f-ba1e-4d96-afcc-c219afd442ac",
    "metadata": {},
-   "source": "Substructural filters use sets of SMARTS patterns to define unwanted substructures. An example is Brenk filter ([docs](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.filters.BrenkFilter.html)), designed to filter out molecules containing substructures with undesirable pharmacokinetics or toxicity, e.g. sulfates, phosphates, nitro groups. Other filters from this group often work based on similar principles, but differing in how aggressively they filter the molecules."
+   "source": [
+    "Substructural filters use sets of SMARTS patterns to define unwanted substructures. An example is Brenk filter ([docs](https://scikit-fingerprints.readthedocs.io/latest/modules/generated/skfp.filters.BrenkFilter.html)), designed to filter out molecules containing substructures with undesirable pharmacokinetics or toxicity, e.g. sulfates, phosphates, nitro groups. Other filters from this group often work based on similar principles, but differing in how aggressively they filter the molecules."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "id": "b0285ab1",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['description', 'FilterSet', 'Reference', 'Scope']"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from skfp.filters import BrenkFilter\n",
     "\n",
@@ -437,7 +436,72 @@
    "id": "9af3ce4f",
    "metadata": {},
    "source": [
-    "Patterns are saved in `._filters` attribute of the filter object. They are represented using RDKit `FilterCatalog` objects, which are quite efficient in checking the patterns, but make it challenging to inspect SMARTS patterns from Python. The first few patterns from BRENK and their meanings are:"
+    "Meanings of filter conditions are available through `.get_feature_names_out()` method. Generally, they are interpretable names given by creators, rather than raw SMARTS patterns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "94b2989e-f6ac-46a7-b1d6-17662b8a4579",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['>_2_ester_groups', '2-halo_pyridine', 'acid_halide',\n",
+       "       'acyclic_C=C-O', 'acyl_cyanide', 'acyl_hydrazine', 'aldehyde',\n",
+       "       'Aliphatic_long_chain', 'alkyl_halide', 'amidotetrazole',\n",
+       "       'aniline', 'azepane', 'Azido_group', 'Azo_group', 'azocane',\n",
+       "       'benzidine', 'beta-keto/anhydride', 'biotin_analogue',\n",
+       "       'Carbo_cation/anion', 'catechol', 'charged_oxygen_or_sulfur_atoms',\n",
+       "       'chinone_1', 'chinone_2', 'conjugated_nitrile_group',\n",
+       "       'crown_ether', 'cumarine', 'cyanamide',\n",
+       "       'cyanate_/aminonitrile_/thiocyanate', 'cyanohydrins',\n",
+       "       'cycloheptane_1', 'cycloheptane_2', 'cyclooctane_1',\n",
+       "       'cyclooctane_2', 'diaminobenzene_1', 'diaminobenzene_2',\n",
+       "       'diaminobenzene_3', 'diazo_group', 'diketo_group', 'disulphide',\n",
+       "       'enamine', 'ester_of_HOBT', 'four_member_lactones',\n",
+       "       'halogenated_ring_1', 'halogenated_ring_2', 'heavy_metal',\n",
+       "       'het-C-het_not_in_ring', 'hydantoin', 'hydrazine', 'hydroquinone',\n",
+       "       'hydroxamic_acid', 'imine_1', 'imine_2', 'iodine', 'isocyanate',\n",
+       "       'isolated_alkene', 'ketene', 'methylidene-1,3-dithiole',\n",
+       "       'Michael_acceptor_1', 'Michael_acceptor_2', 'Michael_acceptor_3',\n",
+       "       'Michael_acceptor_4', 'Michael_acceptor_5', 'N_oxide',\n",
+       "       'N-acyl-2-amino-5-mercapto-1,3,4-_thiadiazole', 'N-C-halo',\n",
+       "       'N-halo', 'N-hydroxyl_pyridine', 'nitro_group', 'N-nitroso',\n",
+       "       'oxime_1', 'oxime_2', 'Oxygen-nitrogen_single_bond',\n",
+       "       'Perfluorinated_chain', 'peroxide', 'phenol_ester',\n",
+       "       'phenyl_carbonate', 'phosphor', 'phthalimide',\n",
+       "       'Polycyclic_aromatic_hydrocarbon_1',\n",
+       "       'Polycyclic_aromatic_hydrocarbon_2',\n",
+       "       'Polycyclic_aromatic_hydrocarbon_3', 'polyene',\n",
+       "       'quaternary_nitrogen_1', 'quaternary_nitrogen_2',\n",
+       "       'quaternary_nitrogen_3', 'saponine_derivative', 'silicon_halogen',\n",
+       "       'stilbene', 'sulfinic_acid', 'Sulfonic_acid_1', 'Sulfonic_acid_2',\n",
+       "       'sulfonyl_cyanide', 'sulfur_oxygen_single_bond', 'sulphate',\n",
+       "       'sulphur_nitrogen_single_bond', 'Thiobenzothiazole_1',\n",
+       "       'thiobenzothiazole_2', 'Thiocarbonyl_group', 'thioester',\n",
+       "       'thiol_1', 'thiol_2', 'Three-membered_heterocycle', 'triflate',\n",
+       "       'triphenyl_methyl-silyl', 'triple_bond'], dtype='<U44')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brenk_filter.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c6f153b-a8c9-4118-b51d-8f164f47c5d8",
+   "metadata": {},
+   "source": [
+    "Underlying SMARTS patterns are represented using RDKit `FilterCatalog` objects, which are quite efficient in checking the patterns. Unfortunately, getting the actual SMARTS strings in Python is challenging, and more easily inferred from RDKit files. The first few patterns from BRENK and their meanings are:"
    ]
   },
   {
