--- a/examples/08_similarity_and_distance_metrics.ipynb
+++ b/examples/08_similarity_and_distance_metrics.ipynb
@@ -96,15 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:10:57.013720Z",
-     "iopub.status.busy": "2025-04-05T16:10:57.013620Z",
-     "iopub.status.idle": "2025-04-05T16:10:57.975129Z",
-     "shell.execute_reply": "2025-04-05T16:10:57.974801Z",
-     "shell.execute_reply.started": "2025-04-05T16:10:57.013705Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -157,15 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:10:57.975668Z",
-     "iopub.status.busy": "2025-04-05T16:10:57.975477Z",
-     "iopub.status.idle": "2025-04-05T16:10:57.978498Z",
-     "shell.execute_reply": "2025-04-05T16:10:57.978236Z",
-     "shell.execute_reply.started": "2025-04-05T16:10:57.975658Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -199,15 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:10:57.978897Z",
-     "iopub.status.busy": "2025-04-05T16:10:57.978799Z",
-     "iopub.status.idle": "2025-04-05T16:10:57.993434Z",
-     "shell.execute_reply": "2025-04-05T16:10:57.993128Z",
-     "shell.execute_reply.started": "2025-04-05T16:10:57.978888Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -276,15 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:10:57.993884Z",
-     "iopub.status.busy": "2025-04-05T16:10:57.993772Z",
-     "iopub.status.idle": "2025-04-05T16:10:58.068686Z",
-     "shell.execute_reply": "2025-04-05T16:10:58.068353Z",
-     "shell.execute_reply.started": "2025-04-05T16:10:57.993874Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -321,13 +289,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:10:58.069216Z",
-     "iopub.status.busy": "2025-04-05T16:10:58.069058Z",
-     "iopub.status.idle": "2025-04-05T16:10:58.071897Z",
-     "shell.execute_reply": "2025-04-05T16:10:58.071616Z",
-     "shell.execute_reply.started": "2025-04-05T16:10:58.069204Z"
-    },
     "id": "OQNn3USQYCWW"
    },
    "outputs": [
@@ -373,15 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:10:58.072776Z",
-     "iopub.status.busy": "2025-04-05T16:10:58.072636Z",
-     "iopub.status.idle": "2025-04-05T16:11:02.154555Z",
-     "shell.execute_reply": "2025-04-05T16:11:02.154118Z",
-     "shell.execute_reply.started": "2025-04-05T16:10:58.072766Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -426,21 +379,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:11:02.154931Z",
-     "iopub.status.busy": "2025-04-05T16:11:02.154826Z",
-     "iopub.status.idle": "2025-04-05T16:11:04.425998Z",
-     "shell.execute_reply": "2025-04-05T16:11:04.425676Z",
-     "shell.execute_reply.started": "2025-04-05T16:11:02.154922Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AUROC: 71.49%\n"
+      "AUROC: 71.21%\n"
      ]
     }
    ],
@@ -480,13 +425,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:11:04.426528Z",
-     "iopub.status.busy": "2025-04-05T16:11:04.426407Z",
-     "iopub.status.idle": "2025-04-05T16:11:05.091156Z",
-     "shell.execute_reply": "2025-04-05T16:11:05.090838Z",
-     "shell.execute_reply.started": "2025-04-05T16:11:04.426517Z"
-    },
     "id": "fUtOB4EAYCWW"
    },
    "outputs": [
@@ -541,13 +479,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:11:05.091579Z",
-     "iopub.status.busy": "2025-04-05T16:11:05.091474Z",
-     "iopub.status.idle": "2025-04-05T16:11:05.498949Z",
-     "shell.execute_reply": "2025-04-05T16:11:05.498416Z",
-     "shell.execute_reply.started": "2025-04-05T16:11:05.091570Z"
-    },
     "id": "Jt0wjKx7djie"
    },
    "outputs": [
@@ -597,42 +528,20 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:11:05.499424Z",
-     "iopub.status.busy": "2025-04-05T16:11:05.499325Z",
-     "iopub.status.idle": "2025-04-05T16:11:05.504235Z",
-     "shell.execute_reply": "2025-04-05T16:11:05.503935Z",
-     "shell.execute_reply.started": "2025-04-05T16:11:05.499415Z"
-    },
     "id": "U7UsgXGXgaod"
    },
    "outputs": [],
    "source": [
     "from skfp.fingerprints import ECFPFingerprint\n",
+    "from skfp.preprocessing import MolFromSmilesTransformer\n",
     "\n",
-    "mols_list = [\n",
-    "    \"CC(C)CC1=CC=C(C=C1)C(C)C(=O)O\",  # Ibuprofen\n",
-    "    \"CN1C=NC2=C1C(=O)N(C(=O)N2C)C\",  # caffeine\n",
-    "    \"c1ncccc1[C@@H]2CCCN2C\",  # nicotine\n",
-    "    \"C1CC1N2C=C(C(=O)C3=CC(=C(C=C32)N4CCNCC4)F)C(=O)O\",  # Ciprofloxacin\n",
-    "    \"CC(=O)CC(C1=CC=CC=C1)C2=C(C3=CC=CC=C3OC2=O)O\",  # Warfarin\n",
-    "    \"CC(=O)Nc1ccc(O)cc1\",  # Paracetamol\n",
-    "    \"CCC[C@@H](C(=O)C(=O)NC1CC1)NC(=O)[C@@H]2[C@H]3CCC[C@H]\"  # Telaprevir\n",
-    "    \"3CN2C(=O)[C@H](C(C)(C)C)NC(=O)[C@H](C4CCCCC4)NC(=O)c5cnccn5\",  # Atorvastatin\n",
-    "    \"O=C(O)C[C@H](O)C[C@H](O)CCn2c(c(c(c2c1ccc(F)cc1)c3ccccc3)C(=O)Nc4ccccc4)C(C)C\",  # Telmisartan\n",
-    "    \"CS(=O)(=O)CCNCc1ccc(o1)c2ccc3c(c2)c(ncn3)Nc4ccc(c(c4)Cl)OCc5cccc(c5)F\",  # Lapatinib\n",
-    "    \"O=C(N)C(C)(C)CNC(=O)[C@H](C(C)C)C[C@H](O)[C@@H](N)C[C@@H](C(C)C)Cc1cc(OCCCOC)c(OC)cc1\",  # Aliskiren\n",
-    "    \"C=12CCC=3C=C(C=C(C3[C@H](C1N=CC(=C2)Br)C4CCN(CC4)C(=O)CC5CCN(CC5)C(N)=O)Br)Cl\",  # Ergotamin\n",
-    "    # Rinfampin\n",
-    "    r\"CN1CCN(CC1)/N=C/c2c(O)c3c5C(=O)[C@@]4(C)O/C=C/[C@H](OC)[C@@H](C)[C@@H](OC(C)=O)[C@H](C)[C@H](O)[C@H](C)[C@@H](O)[C@@H](C)\\C=C\\C=C(\\C)C(=O)Nc2c(O)c3c(O)c(C)c5O4\",\n",
-    "    # Probucol\n",
-    "    \"S(c1cc(c(O)c(c1)C(C)(C)C)C(C)(C)C)C(Sc2cc(c(O)c(c2)C(C)(C)C)C(C)(C)C)(C)C\",\n",
-    "    # Kanamycin\n",
-    "    \"O([C@@H]2[C@@H](O)[C@H](O[C@H]1O[C@H](CN)[C@@H](O)[C@H](O)[C@H]1O)[C@@H](N)C[C@H]2N)[C@H]3O[C@@H]([C@@H](O)[C@H](N)[C@H]3O)CO\",\n",
-    "]\n",
+    "mol_from_smiles = MolFromSmilesTransformer(suppress_warnings=True)\n",
+    "smiles, y = load_bace()\n",
+    "smiles = smiles[:100]  # subset for speed\n",
+    "mols = mol_from_smiles.transform(smiles)\n",
     "\n",
     "fp = ECFPFingerprint(count=True)\n",
-    "fps = fp.transform(mols_list)"
+    "fps = fp.transform(mols)"
    ]
   },
   {
@@ -642,13 +551,6 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:11:05.504711Z",
-     "iopub.status.busy": "2025-04-05T16:11:05.504543Z",
-     "iopub.status.idle": "2025-04-05T16:11:05.661892Z",
-     "shell.execute_reply": "2025-04-05T16:11:05.661331Z",
-     "shell.execute_reply.started": "2025-04-05T16:11:05.504702Z"
-    },
     "id": "pbGGAxWhhmPt",
     "outputId": "aa6f54cc-5886-4955-c55c-7a671729df41"
    },
@@ -657,7 +559,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11.6 ms ± 1.64 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
+      "234 ms ± 9.09 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -672,32 +574,17 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
-    "execution": {
-     "iopub.execute_input": "2025-04-05T16:11:05.662331Z",
-     "iopub.status.busy": "2025-04-05T16:11:05.662235Z",
-     "iopub.status.idle": "2025-04-05T16:11:06.086372Z",
-     "shell.execute_reply": "2025-04-05T16:11:06.086046Z",
-     "shell.execute_reply.started": "2025-04-05T16:11:05.662323Z"
-    },
     "id": "9e9AtjEThn6U",
     "outputId": "e227bf9c-187e-4730-e025-d92f10fd9bf1",
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'bulk_tanimoto_count_similarity' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[12], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mget_ipython\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrun_line_magic\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mtimeit\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43m-r 3 -n 10 [bulk_tanimoto_count_similarity(fps, fps)]\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\interactiveshell.py:2480\u001B[0m, in \u001B[0;36mInteractiveShell.run_line_magic\u001B[1;34m(self, magic_name, line, _stack_depth)\u001B[0m\n\u001B[0;32m   2478\u001B[0m     kwargs[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mlocal_ns\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mget_local_scope(stack_depth)\n\u001B[0;32m   2479\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mbuiltin_trap:\n\u001B[1;32m-> 2480\u001B[0m     result \u001B[38;5;241m=\u001B[39m \u001B[43mfn\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   2482\u001B[0m \u001B[38;5;66;03m# The code below prevents the output from being displayed\u001B[39;00m\n\u001B[0;32m   2483\u001B[0m \u001B[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001B[39;00m\n\u001B[0;32m   2484\u001B[0m \u001B[38;5;66;03m# when the last Python token in the expression is a ';'.\u001B[39;00m\n\u001B[0;32m   2485\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mgetattr\u001B[39m(fn, magic\u001B[38;5;241m.\u001B[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001B[38;5;28;01mFalse\u001B[39;00m):\n",
-      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\magics\\execution.py:1189\u001B[0m, in \u001B[0;36mExecutionMagics.timeit\u001B[1;34m(self, line, cell, local_ns)\u001B[0m\n\u001B[0;32m   1186\u001B[0m         \u001B[38;5;28;01mif\u001B[39;00m time_number \u001B[38;5;241m>\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m0.2\u001B[39m:\n\u001B[0;32m   1187\u001B[0m             \u001B[38;5;28;01mbreak\u001B[39;00m\n\u001B[1;32m-> 1189\u001B[0m all_runs \u001B[38;5;241m=\u001B[39m \u001B[43mtimer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrepeat\u001B[49m\u001B[43m(\u001B[49m\u001B[43mrepeat\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnumber\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1190\u001B[0m best \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mmin\u001B[39m(all_runs) \u001B[38;5;241m/\u001B[39m number\n\u001B[0;32m   1191\u001B[0m worst \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mmax\u001B[39m(all_runs) \u001B[38;5;241m/\u001B[39m number\n",
-      "File \u001B[1;32me:\\Users\\PanSt\\OneDrive\\Pulpit\\Python\\Lib\\timeit.py:206\u001B[0m, in \u001B[0;36mTimer.repeat\u001B[1;34m(self, repeat, number)\u001B[0m\n\u001B[0;32m    204\u001B[0m r \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m    205\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(repeat):\n\u001B[1;32m--> 206\u001B[0m     t \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtimeit\u001B[49m\u001B[43m(\u001B[49m\u001B[43mnumber\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    207\u001B[0m     r\u001B[38;5;241m.\u001B[39mappend(t)\n\u001B[0;32m    208\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m r\n",
-      "File \u001B[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\IPython\\core\\magics\\execution.py:173\u001B[0m, in \u001B[0;36mTimer.timeit\u001B[1;34m(self, number)\u001B[0m\n\u001B[0;32m    171\u001B[0m gc\u001B[38;5;241m.\u001B[39mdisable()\n\u001B[0;32m    172\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m--> 173\u001B[0m     timing \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43minner\u001B[49m\u001B[43m(\u001B[49m\u001B[43mit\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtimer\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    174\u001B[0m \u001B[38;5;28;01mfinally\u001B[39;00m:\n\u001B[0;32m    175\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m gcold:\n",
-      "File \u001B[1;32m<magic-timeit>:1\u001B[0m, in \u001B[0;36minner\u001B[1;34m(_it, _timer)\u001B[0m\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'bulk_tanimoto_count_similarity' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 15.38 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "15.7 ms ± 18.4 ms per loop (mean ± std. dev. of 3 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -718,7 +605,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -732,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
