--- a/examples/10_molecular_clustering.ipynb
+++ b/examples/10_molecular_clustering.ipynb
@@ -24,21 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "df2e8529",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from skfp.clustering import MinMaxClustering\n",
+    "from skfp.clustering import MaxMinClustering\n",
     "from skfp.datasets.moleculenet import load_bace\n",
     "from skfp.fingerprints import ECFPFingerprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b65ec205",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
     "\n",
     "| Algorithm | Distance / Similarity | Centroid-based | Produces labels | Predict on new data | Typical use case |\n",
     "|---------|----------------------|----------------|------------------|---------------------|------------------|\n",
-    "| MinMax clustering | Tanimoto (binary fingerprints) | Yes (diverse representatives) | Yes | Yes | Partitioning chemical space into representative clusters |\n"
+    "| MaxMin clustering | Tanimoto (binary fingerprints) | Yes (diverse representatives) | Yes | Yes | Partitioning chemical space into representative clusters |\n"
    ]
   },
   {
@@ -69,36 +69,36 @@
    "id": "4b229e44",
    "metadata": {},
    "source": [
-    "# MinMax clustering\n",
+    "## MaxMin clustering\n",
     "\n",
-    "MinMax clustering is a centroid-based clustering method designed for binary molecular fingerprints. It combines diversity-based centroid selection with similarity-based cluster assignment, making it particularly suitable for partitioning chemical space into representative regions.\n",
+    "MaxMin clustering is a centroid-based clustering method designed for binary molecular fingerprints. It combines diversity-based centroid selection with similarity-based cluster assignment, making it particularly suitable for partitioning chemical space into representative regions.\n",
     "\n",
-    "Unlike many classical clustering algorithms, MinMax clustering explicitly selects cluster centers to maximize diversity before assigning molecules to clusters.\n",
+    "Unlike many classical clustering algorithms, MaxMin clustering explicitly selects cluster centers to maximize diversity before assigning molecules to clusters.\n",
     "\n",
-    "### Algorithm overview\n",
+    "**Algorithm overview**\n",
     "\n",
-    "MinMax clustering proceeds in two stages:\n",
+    "MaxMin clustering proceeds in two stages:\n",
     "\n",
-    "- **Centroid selection (MaxMin diversity picking)**\n",
+    "- *Centroid selection (MaxMin diversity picking)*\n",
     "A set of representative molecules is selected using RDKit’s MaxMinPicker. Centroids are chosen iteratively such that each newly selected centroid maximizes the minimum Tanimoto distance to all previously selected centroids. This encourages broad coverage of chemical space.\n",
     "\n",
-    "- **Cluster assignment**\n",
+    "- *Cluster assignment*\n",
     "Once centroids are fixed, all molecules (including the centroids themselves) are assigned to the nearest centroid using Tanimoto similarity. Each molecule is assigned to the cluster corresponding to the centroid with the highest similarity.\n",
     "\n",
-    "### Distance and similarity\n",
+    "**Distance and similarity**\n",
     "\n",
-    "MinMax clustering operates on binary fingerprints and uses:\n",
+    "MaxMin clustering operates on binary fingerprints and uses:\n",
     "\n",
     "- *Tanimoto similarity* to measure molecular similarity\n",
     "- *Tanimoto distance* (1 − similarity) during centroid selection\n",
     "\n",
     "This choice is standard in cheminformatics and well suited for sparse binary representations such as ECFP (Morgan) fingerprints.\n",
     "\n",
-    "### Controlling cluster granularity\n",
+    "**Controlling cluster granularity**\n",
     "\n",
     "The number and spread of clusters are controlled by the distance threshold used during centroid selection:\n",
-    "- **Lower thresholds** produce fewer, broader clusters\n",
-    "- **Higher thresholds** produce more, finer-grained clusters\n",
+    "- *Lower thresholds* produce fewer, broader clusters\n",
+    "- *Higher thresholds* produce more, finer-grained clusters\n",
     "\n",
     "The exact number of clusters emerges from the data and the chosen threshold.\n",
     "\n",
@@ -107,13 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0ef9b136",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([124, 307, 194, ..., 263, 263, 216], shape=(1513,))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# run MinMax clustering (distance threshold 0.4) - this outputs a label for each molecule\n",
-    "clusterer = MinMaxClustering(distance_threshold=0.4, random_state=0)\n",
+    "# run MaxMin clustering (distance threshold 0.4) - this outputs a label for each molecule\n",
+    "clusterer = MaxMinClustering(distance_threshold=0.4, random_state=0)\n",
     "labels = clusterer.fit_predict(fps)\n",
     "labels"
    ]
@@ -123,17 +134,27 @@
    "id": "28dcb24b",
    "metadata": {},
    "source": [
-    "### Inspecting Clustering Results \n",
+    "**Inspecting Clustering Results**\n",
     "\n",
     "To better understand the outcome, we first examine how many clusters were created and how compressed the chemical space is on average."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "32da15cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of molecules: 1513\n",
+      "Number of clusters (distance_threshold=0.4): 347\n",
+      "Average molecules per cluster: 4.4\n"
+     ]
+    }
+   ],
    "source": [
     "n_molecules = len(smiles)\n",
     "n_clusters = len(clusterer.centroid_indices_)\n",
@@ -148,7 +169,7 @@
    "id": "aa74a3d7",
    "metadata": {},
    "source": [
-    "### Cluster size distribution \n",
+    "**Cluster size distribution**\n",
     "\n",
     "Next, we attach the cluster labels to a table and *rank clusters by size*. \n",
     "\n",
@@ -157,10 +178,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "44b94576",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 largest clusters:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "cluster\n",
+       "0      33\n",
+       "17     32\n",
+       "261    29\n",
+       "281    29\n",
+       "187    24\n",
+       "15     21\n",
+       "324    18\n",
+       "218    18\n",
+       "190    18\n",
+       "145    17\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame(\n",
     "    {\n",
@@ -180,20 +230,31 @@
    "id": "01d91dc5",
    "metadata": {},
    "source": [
-    "### Effect of the distance threshold \n",
+    "**Effect of the distance threshold**\n",
     "\n",
     "Finally, we explore how changing the distance threshold affects the number of clusters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4feedf52",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "threshold=0.30 -> n_clusters=600\n",
+      "threshold=0.40 -> n_clusters=347\n",
+      "threshold=0.50 -> n_clusters=211\n",
+      "threshold=0.70 -> n_clusters=83\n"
+     ]
+    }
+   ],
    "source": [
     "for t in [0.3, 0.4, 0.5, 0.7]:\n",
-    "    c = MinMaxClustering(distance_threshold=t, random_state=0)\n",
+    "    c = MaxMinClustering(distance_threshold=t, random_state=0)\n",
     "    c.fit(fps)\n",
     "    print(f\"threshold={t:0.2f} -> n_clusters={len(c.centroid_indices_)}\")"
    ]
@@ -214,8 +275,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "scikit-fingerprints",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
